processes getting created and names are visible

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -27,11 +27,23 @@
     
     <!-- Section to View All Processes -->
     <div id="all-processes">
-        <h2>Your Processes</h2>
-        <ul id="process-list">
-            <!-- Processes will be listed here -->
-        </ul>
+        <h2>Processes</h2>
+
+        <div id="created-processes">
+            <h3>Created by You</h3>
+            <ul id="created-process-list">
+                <!-- Processes created by the user will be listed here -->
+            </ul>
+        </div>
+
+        <div id="signoff-processes">
+            <h3>Need Signoff</h3>
+            <ul id="signoff-process-list">
+                <!-- Processes that need user's sign-off will be listed here -->
+            </ul>
+        </div>
     </div>
+
 </div>
 
 <script src="scripts.js"></script>
