images getting uploaded

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -27,22 +27,18 @@
     
     <!-- Section to View All Processes -->
     <div id="all-processes">
-        <h2>Processes</h2>
-
-        <div id="created-processes">
-            <h3>Created by You</h3>
-            <ul id="created-process-list">
-                <!-- Processes created by the user will be listed here -->
-            </ul>
+        <h2>Processes Created by You</h2>
+        <div id="created-process-list">
+            <!-- Processes created by you will be listed here -->
         </div>
 
-        <div id="signoff-processes">
-            <h3>Need Signoff</h3>
-            <ul id="signoff-process-list">
-                <!-- Processes that need user's sign-off will be listed here -->
-            </ul>
+        <h2>Processes Needing Your Signoff</h2>
+        <div id="signoff-process-list">
+            <!-- Processes requiring your signoff will be listed here -->
         </div>
     </div>
+    <!-- Sample sign-off form for a process -->
+
 
 </div>
 
