hiden comment feature enabled

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -14,12 +14,17 @@
     <!-- Section to Create a New Process -->
     <div id="create-process-section" class="form-section">
         <h2>Create New Process</h2>
-        <label>Select 5 users:</label>
+        <label>Select 5 users:</label><br>
         <select id="user1"></select>
+        <input type="checkbox" id="user1-canSeeComments" value="true"> comments visibility <br>
         <select id="user2"></select>
+        <input type="checkbox" id="user2-canSeeComments" value="true"> comments visibility <br>
         <select id="user3"></select>
+        <input type="checkbox" id="user3-canSeeComments" value="true"> comments visibility <br>
         <select id="user4"></select>
+        <input type="checkbox" id="user4-canSeeComments" value="true"> comments visibility <br>
         <select id="user5"></select>
+        <input type="checkbox" id="user5-canSeeComments" value="true"> comments visibility <br>
         <label>Description:</label>
         <textarea id="process-description" placeholder="Describe the process"></textarea>
         <button onclick="createNewProcess()">Create Process</button>
