added notifications functionality

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -32,6 +32,8 @@
     
     <!-- Section to View All Processes -->
     <div id="all-processes">
+        <h2>Notifications for you</h2>
+        <ul id="notifications-list"></ul>
         <h2>Processes Created by You</h2>
         <div id="created-process-list">
             <!-- Processes created by you will be listed here -->
