added metamask too

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,6 +10,9 @@
 
 <div class="container">
     <h1>Welcome to Your Dashboard</h1>
+    <div id="metamask-section">
+    <button id="metamask-connect" onclick="connectMetaMask()">Connect MetaMask Wallet</button>
+    </div>
     
     <!-- Section to Create a New Process -->
     <div id="create-process-section" class="form-section">
