--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -12,6 +12,8 @@
     <h1>Welcome to Your Dashboard</h1>
     <div id="metamask-section">
     <button id="metamask-connect" onclick="connectMetaMask()">Connect MetaMask Wallet</button>
+    <button id="logout-button">Logout</button>
+
     </div>
     
     <!-- Section to Create a New Process -->
